--- a/toolbox-client/package.json
+++ b/toolbox-client/package.json
@@ -16,7 +16,7 @@
     "@babel/preset-react": "^7.24.7",
     "@testing-library/dom": "^8.20.1",
     "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
+    "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^14.5.2",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
@@ -31,8 +31,8 @@
   "dependencies": {
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "react": "17.0.0",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1"
+    "react-dom": "17.0.0"
   }
 }
